force-app/main/default/objects/User.object
<CustomObject>
    <fields>
        <fullName>Add_Pastoral_Permission_Set__c</fullName>
        <formula>AND( 
    Profile.Id = &quot;00e6F0000020GEY&quot;, 
    Is_US_School_User__c = FALSE 
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add Pastoral Permission Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admissions_Booklet__c</fullName>
        <label>Admissions Booklet</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Authorised_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to allow a user to be selected in the &apos;Default Days off Approver&apos; field on the account object, staff member record type</description>
        <label>Authorised Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chácara Flora</fullName>
                </value>
                <value>
                    <fullName>Cidade Jardim</fullName>
                </value>
                <value>
                    <fullName>Krylatskoe</fullName>
                </value>
                <value>
                    <fullName>Rosinka</fullName>
                </value>
                <value>
                    <fullName>Lower Campus</fullName>
                </value>
                <value>
                    <fullName>Upper Campus</fullName>
                </value>
                <value>
                    <fullName>Cross-Campus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_Edit_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Typically only to be used for group level employees such as the group Head of Finance and System Administrators</inlineHelpText>
        <label>Can Edit Fees?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Edit_Web_Meta_Titles_Descriptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in a validation rule on the Web Content object for English records. Identifies users who have permission to edit the English meta tag titles and descriptions.</description>
        <label>Can Edit Web Meta Titles &amp; Descriptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Man_Control_Parent_Group_Membership__c</fullName>
        <formula>Profile.Name == &quot;System Administrator&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can Man. Control Parent Group Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Us__c</fullName>
        <label>Contact Us</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Declaration_Form_Link__c</fullName>
        <label>Declaration Form Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Default_Digest_Frequency__c</fullName>
        <description>As it is currently (25/11/14) impossible to set the default digest frequency for COMMUNITY users (i.e. anyone who&apos;s the member of a parent portal blog) to anything other than &apos;W&apos;, this field is used to define the frequency directly on the collaboration group member records when they are created via the trigger from student group or by manual addition of members. I have a feeling this will be rectified in the Spring &apos;15 Release.</description>
        <formula>IF (Profile.Name = &quot;Parent Portal User - High Volume&quot;, &quot;N&quot;, &quot;W&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Community Digest Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>TEXT(Manage_Chatter_Free_Users__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Copy__c</fullName>
        <formula>Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Domain_Extension__c</fullName>
        <inlineHelpText>Example &quot;@britishschool.edu.my&quot;</inlineHelpText>
        <label>Email Domain Extension</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Header__c</fullName>
        <formula>IF( 
   OR( 
      TEXT(School__c) = &quot;The British International School of Marbella&quot;, 
      TEXT(School__c) = &quot;The British School of Navarra&quot;, 
      TEXT(School__c) = &quot;The British School of Brasilia&quot;, 
      TEXT(School__c) = &quot;The British Schools Foundation&quot; 
      ),
   &quot;Chartered by The British Schools Foundation&quot;,
   &quot;&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Next_Fiscal_Year__c</fullName>
        <formula>IF( 
   MONTH(TODAY()) &gt;= 8, 
   DATE(YEAR(TODAY())+2,07,31), 
   DATE(YEAR(TODAY())+1,07,31) 
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Next Fiscal Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_This_Fiscal_Year__c</fullName>
        <formula>IF( 
   MONTH(TODAY()) &gt;= 8, 
   DATE(YEAR(TODAY())+1,07,31), 
   DATE(YEAR(TODAY()),07,31) 
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date This Fiscal Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Family_File_Id__c</fullName>
        <formula>IF( Contact.RecordType.DeveloperName == &quot;Additional_Parent&quot;, CASESAFEID(Contact.Main_Parent_File__c) , CASESAFEID(Contact.AccountId))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family File Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreeSSO__Google_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Is the uniqueID of a G+ user issued by Google. This ID is surfaced if you open a G+ user&apos;s profile page and take a look at the URL: https://plus.google.com/u/0/&lt;Google ID&gt;</inlineHelpText>
        <label>Google ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Full_School_Address_for_Docs__c</fullName>
        <description>Used in merge templates which need to contain the address of the school</description>
        <label>Full School Address for Docs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_School_Name_for_Docs__c</fullName>
        <label>Full School Name for Docs</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Drive_Photo_Link__c</fullName>
        <description>16/12/2016: Currently just a test to see if it&apos;s feasible to use Google Drive file URLs as the source of staff directory images rather than attachments</description>
        <inlineHelpText>Testing only. Please ignore.</inlineHelpText>
        <label>Google Drive Photo Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Has_Profile_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by means of a trigger, indicates whether or not the user has added a profile photo. NB. Is only accurate for records that have been edited since the photo was uploaded.</description>
        <label>Has Profile Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Notifications_Email_User__c</fullName>
        <formula>Contact.IT_Notifications_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IT Notifications Email (User)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Chatter_Free_User__c</fullName>
        <formula>Profile.Name == &quot;Chatter Free User&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Chatter Free User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Portal_User__c</fullName>
        <description>Identifies whether or not a user is a Portal/Community user (replaces &apos;IsPortalEnabled&apos; field that is no longer supported in new SFDC versions).</description>
        <formula>NOT(ISBLANK(ContactId))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_US_Locale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the locale is set to &apos;English - United States&apos;. Used to display dates in the parent portal in the correct format for US users.</description>
        <label>Is US Locale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_US_School_User__c</fullName>
        <formula>TEXT(School__c) = &quot;The New York International School&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is US School User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_to_Related_Contact__c</fullName>
        <formula>HYPERLINK(&quot;https://ap4.salesforce.com/&quot;&amp;Related_Contact_ID__c, &quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Related Staff Member Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manage_Chatter_Free_Users__c</fullName>
        <label>Manage Chatter Free Users</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>As Admin</fullName>
                </value>
                <value>
                    <fullName>As Academic</fullName>
                </value>
                <value>
                    <fullName>As Web Dev</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matches_Current_User_School__c</fullName>
        <formula>IF(TEXT($User.School__c) = TEXT(School__c), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matches Current User School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <label>Newsletter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Online_Application__c</fullName>
        <label>Online Application</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Override_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to prevent the relevant workflow rules from automatically generating a &apos;Positioning&apos; value for the staff directory record</description>
        <label>Override Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Has_Logged_In__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only relevant to parent users</inlineHelpText>
        <label>Parent Has Logged In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Type__c</fullName>
        <formula>IF(
   ISBLANK(Contact.RecordType.DeveloperName),
   &quot;Account&quot;,
   IF(
      Contact.RecordType.DeveloperName = &quot;Additional_Parent&quot;,
      &quot;Contact&quot;,
      &quot;&quot;
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Attachment_Id__c</fullName>
        <label>Photo Attachment Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Populate_Portal_User_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>to be checked by time based workflow</inlineHelpText>
        <label>Populate Portal User Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Account_Id__c</fullName>
        <label>Portal Account Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Contact_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Contact_Sync_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Contact Sync Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Support_Email_Address__c</fullName>
        <formula>CASE(School__c, 
&quot;The British School of Guangzhou&quot;, &quot;support@bsg.org.cn&quot;, 
&quot;The British International School of Kuala Lumpur&quot;, &quot;support@britishschool.edu.my&quot;, 
&quot;The British School of Nanjing&quot;, &quot;support@bsn.org.cn&quot;, 
&quot;The British School Yangon&quot;, &quot;support@britishschoolyangon.org&quot;, 
&quot;Nord Anglia International School Manila&quot;, &quot;support@kings.org.ph&quot;,  
&quot;The British International School of Marbella&quot;, &quot;support@bsm.org.es&quot;, 
&quot;The British School of Navarra&quot;, &quot;support@bsn.org.es&quot;, 
&quot;The British College of Brazil&quot;, &quot;support@britishcollegebrazil.org&quot;, 
&quot;The British School of Tashkent&quot;, &quot;support@britishschool.uz&quot;, 
&quot;The International School of Moscow&quot;, &quot;support@internationalschool.ru&quot;, 
&quot;Ukraine International School&quot;, &quot;support@ukraineinternationalschool.com&quot;, 
&quot;The New York International School&quot;, &quot;support@nyis.org&quot;,
&quot;The British School of Brasilia&quot;, &quot;support@britishschoolbrasilia.org&quot;, 
&quot;support@britishschools.co.uk&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Support Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Invoice_Currency_Formula__c</fullName>
        <description>Replaces the previous picklist field of the same name that was created before &apos;School__c&apos; was an available/controlling field on the user object.</description>
        <formula>CASE(
     School__c, 
     &quot;The British School of Nanjing&quot;, &quot;CNY&quot;,
     &quot;The British International School of Marbella&quot;, &quot;EUR&quot;,
     &quot;The British School of Navarra&quot;, &quot;EUR&quot;,
     &quot;The British College of Brazil&quot;, &quot;BRL&quot;,
     &quot;The British School of Brasilia&quot;, &quot;BRL&quot;,
     &quot;The British International School of Kuala Lumpur&quot;, &quot;MYR&quot;,
     &quot;The British School of Tashkent&quot;, &quot;UZS&quot;,
     &quot;The International School of Moscow&quot;, &quot;EUR&quot;,
     &quot;Nord Anglia International School Manila&quot;, &quot;PHP&quot;,
     &quot;USD&quot;
     )

/* Example Formula for School Name Change */ 

/*CASE(
     School__c, 
     &quot;The British School of Nanjing&quot;, &quot;CNY&quot;,
     &quot;The British School of Marbella&quot;, &quot;EUR&quot;,
     &quot;The British International School of Marbella&quot;, &quot;EUR&quot;,
     &quot;The British School of Navarra&quot;, &quot;EUR&quot;,
     &quot;The British College of Brazil&quot;, &quot;BRL&quot;,
     &quot;The British School of Brasilia&quot;, &quot;BRL&quot;,
     &quot;The British International School of Kuala Lumpur&quot;, &quot;MYR&quot;,
     &quot;The British School of Tashkent&quot;, &quot;UZS&quot;,
     &quot;The International School of Moscow&quot;, &quot;EUR&quot;,
     &quot;Nord Anglia International School Manila&quot;, &quot;PHP&quot;,
     &quot;USD&quot;
     )*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The primary/preferred currency which the school uses in invoices to parents/companies.</inlineHelpText>
        <label>Primary Invoice Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Invoice_Currency__c</fullName>
        <description>29/10/2015: Pending deletion - please use &quot;Primary_Invoice_Currency_Formula__c&quot; instead</description>
        <inlineHelpText>The primary/preferred currency which the school uses in invoices to parents/companies.</inlineHelpText>
        <label>Primary Invoice Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>MMK</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>UAH</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>UZS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Parent__c</fullName>
        <formula>IF((Contact.Account.Year1__c + Contact.Account.Year2__c +Contact.Account.Year3__c+Contact.Account.Year4__c+Contact.Account.Year5__c+Contact.Account.Year6__c+ Contact.Account.Reception1__c + Contact.Account.Nursery1__c +Contact.Account.PreNursery__c)&gt;0,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_on_School_Site__c</fullName>
        <formula>AND(
    S_Dir_Profile_Approved_by_Admin__c = TRUE, 
    Profile.Name != &quot;Parent Portal User - High Volume&quot;, 
    Profile.Name != &quot;Overage High Volume Customer Portal User&quot;, 
    Profile.Name != &quot;Customer Community Plus User&quot;, 
    S_Dir_Status__c = &quot;Employed&quot;, 
    NOT(ISBLANK(S_Dir_Positioning__c)), 
    S_Dir_Positioning__c != 0, 
    S_Dir_Positioning__c != 9999, 
    S_Dir_Personal_Interests_Not_Blank__c = &quot;True&quot;
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A Visible profile must meet the following criteria: 
1) Be approved by Admin
2) Be that of an employed Staff Member and properly linked
3) &apos;Positioning&apos; must not be blank, 0 or 9999
4) &apos;Personal Interests&apos; must not be blank</inlineHelpText>
        <label>Profile Visible on Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Account_ID__c</fullName>
        <description>A temporary field used for testing</description>
        <formula>IF(Contact.RecordTypeId = &quot;0126F000001hVzi&quot;, Contact.Main_Parent_File__r.Id, 

IF(Contact.RecordTypeId = null, Contact.AccountId,

&quot;Invalid&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact_Account_ID_18_Char__c</fullName>
        <description>As of 05/09/2015 only used via connector etc. for data management</description>
        <formula>IF(Contact.RecordTypeId = &quot;0126F000001hVzi&quot;, CASESAFEID(Contact.Id), 

IF(Contact.RecordTypeId = null, CASESAFEID(Contact.AccountId), 

&quot;Invalid&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Contact/Account ID (18 Char)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to capture the ID of the relevant contact when a new staff member user is created so that the contact and the user can be connected</description>
        <label>Related Contact ID (Staff Member)</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>S_Dir_Degree__c</fullName>
        <label>Qualifications</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S_Dir_Department__c</fullName>
        <label>School Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Support Staff</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S_Dir_Name__c</fullName>
        <formula>TEXT(S_Dir_Salutation__c) &amp; &quot; &quot; &amp;  FirstName &amp; &quot; &quot; &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Dir_Origin__c</fullName>
        <description>Populated via an a-sync job based on updates made to the relevant staff member record</description>
        <label>Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Dir_Personal_Interests_Not_Blank__c</fullName>
        <description>Populated via a workflow rule, is &apos;True&apos; when the &apos;Personal Interests&apos; field is not blank (for use in the &apos;Show on Website&apos; formula field)</description>
        <label>Personal Interests Not Blank</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Dir_Personal_Interests__c</fullName>
        <label>Staff Bio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S_Dir_Positioning__c</fullName>
        <description>Defines the positioning on the website: lowest number from left to right, top to bottom</description>
        <label>Positioning</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Dir_Primary_Year_Group__c</fullName>
        <label>Primary Year Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Dir_Profile_Approved_by_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not a profile is approved and published on the school website (new site only)</description>
        <label>Profile Approved by Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_Dir_Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S_Dir_Specialist_Subjects__c</fullName>
        <label>Specialist Subjects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Dir_Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Dir_Title_New__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Dir_Web_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Dir_Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Abbreviation__c</fullName>
        <formula>CASE(
     TEXT(School__c), 
     &quot;The British International School of Kuala Lumpur&quot;, &quot;BSKL&quot;, 
     &quot;The International School of Moscow&quot;, &quot;ISM&quot;, 
     &quot;The British School of Nanjing&quot;, &quot;BSNJ&quot;, 
     &quot;The British School of Navarra&quot;, &quot;BSN&quot;,  
     &quot;The British International School of Marbella&quot;, &quot;BISM&quot;, 
     &quot;The British School of Tashkent&quot;, &quot;BST&quot;, 
     &quot;The British College of Brazil&quot;, &quot;BCB&quot;, 
     &quot;The British School of Brasilia&quot;, &quot;BSB&quot;, 
     &quot;The British School Yangon&quot;, &quot;BSY&quot;, 
     &quot;The British School of Guangzhou&quot;, &quot;BSG&quot;, 
     &quot;Ukraine International School&quot;, &quot;UIS&quot;, 
     &quot;King&apos;s College Beijing&quot;, &quot;KCB&quot;, 
     &quot;The New York International School&quot;, &quot;NYIS&quot;,
     &quot;Nord Anglia International School Manila&quot;, &quot;NAISM&quot;,
     &quot;BSF&quot;
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Hub_Video__c</fullName>
        <label>School Hub Video</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>School_List_Email_Footer__c</fullName>
        <formula>IF(
   OR(
      TEXT(School__c) = &quot;The British International School of Marbella&quot;,
      TEXT(School__c) = &quot;The British School of Navarra&quot;,
      TEXT(School__c) = &quot;The British School of Brasilia&quot;,
      TEXT(School__c) = &quot;The British Schools Foundation&quot;
      ),
   &quot;Brasília - Kuala Lumpur - Manila - Marbella - Moscow - Nanjing - Navarra - São Paulo - Tashkent - Yangon&quot;,
   &quot;&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School List Email Footer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Override_Field__c</fullName>
        <inlineHelpText>Shows the staff directory record on the selected sites AS WELL AS the site of the school that the user belongs to, assuming all other publishing criteria are met.</inlineHelpText>
        <label>School Override Field (Additional)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
                <value>
                    <fullName>Marbella</fullName>
                </value>
                <value>
                    <fullName>Moscow</fullName>
                </value>
                <value>
                    <fullName>Nanjing</fullName>
                </value>
                <value>
                    <fullName>Navarra</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>São Paulo</fullName>
                </value>
                <value>
                    <fullName>Tashkent</fullName>
                </value>
                <value>
                    <fullName>Yangon</fullName>
                </value>
                <value>
                    <fullName>Group Site</fullName>
                </value>
                <value>
                    <fullName>Sandbox 1</fullName>
                </value>
                <value>
                    <fullName>Sandbox 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Website__c</fullName>
        <formula>CASE(TEXT(School__c), 
&quot;The British International School of Kuala Lumpur&quot;, &quot;https://britishschool.edu.my/&quot;, 
&quot;The International School of Moscow&quot;, &quot;https://internationalschool.ru/&quot;, 
&quot;The British School of Nanjing&quot;, &quot;https://bsn.org.cn/&quot;, 
&quot;The British School of Navarra&quot;, &quot;https://bsn.org.es/&quot;,  
&quot;The British International School of Marbella&quot;, &quot;https://bsm.org.es/&quot;, 
&quot;The British School of Tashkent&quot;, &quot;https://britishschool.uz/&quot;, 
&quot;The British College of Brazil&quot;, &quot;https://britishcollegebrazil.org/&quot;, 
&quot;The British School Yangon&quot;, &quot;https://britishschoolyangon.org/&quot;, 
&quot;The New York International School&quot;, &quot;https://nyis.org/&quot;,
&quot;The British School of Brasilia&quot;, &quot;https://britishschoolbrasilia.org/&quot;,
&quot;Nord Anglia International School Manila&quot;, &quot;https://kings.org.ph/&quot;,
&quot;https://britishschools.co.uk&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The British Schools Foundation</fullName>
                </value>
                <value>
                    <fullName>The British School of Guangzhou</fullName>
                </value>
                <value>
                    <fullName>The British School of Nanjing</fullName>
                </value>
                <value>
                    <fullName>The British International School of Marbella</fullName>
                </value>
                <value>
                    <fullName>The British School of Navarra</fullName>
                </value>
                <value>
                    <fullName>The British School of Tashkent</fullName>
                </value>
                <value>
                    <fullName>The British College of Brazil</fullName>
                </value>
                <value>
                    <fullName>The British International School of Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>The International School of Moscow</fullName>
                </value>
                <value>
                    <fullName>Nord Anglia International School Manila</fullName>
                </value>
                <value>
                    <fullName>King&apos;s College Beijing</fullName>
                </value>
                <value>
                    <fullName>The British School Yangon</fullName>
                </value>
                <value>
                    <fullName>Ukraine International School</fullName>
                </value>
                <value>
                    <fullName>The New York International School</fullName>
                </value>
                <value>
                    <fullName>The British School of Brasilia</fullName>
                </value>
                <value>
                    <fullName>NAE</fullName>
                </value>
                <value>
                    <fullName>The British International School Yangon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>